--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,23 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+
+:root {
+  --font-primary: 'Inter-Variable', sans-serif;
+  --font-accent: 'PressStart2P-Regular', sans-serif;
+  --font-wieght: 410;
+  --font-wieght-bold: 715;
+  --bg-gradients: 
+    repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+  --widgth-card: clamp(375px, calc(50vw - 20px), 1440px);
+  --margin-bottom-title: clamp(240px, 50vh + 10px, 900px);
+  --padding-title-card: 6px 10px;
+  --padding-text-card: 20px 25px 20px 25px;
+  --padding-button-container: 0 25px 25px 25px;
+  --text-color: white;
+  
+  --heart-contour-fill: black;
+  --heart-body-fill: transparent;
+  --heart-core-fill: transparent;
+  --heart-sparks-fill: #FF0000;
+}
