--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -10,6 +10,7 @@
 @font-face {
     font-family: 'Inter-Variable';
     src: url(./Inter-Variable.woff2) format('woff2');
-    font-weight: 410 715; /* диапазон жирности */
+    src: url(./Inter-Variable.woff2) format('woff2-variations');
+    font-weight: 400 785; 
     
 }
