--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -12,5 +12,11 @@
     src: url(./Inter-Variable.woff2) format('woff2');
     src: url(./Inter-Variable.woff2) format('woff2-variations');
     font-weight: 400 785; 
-    
+}
+
+@supports (font-variation-settings: normal) {
+  @font-face {
+    font-family: 'Inter-Variable';
+    src: url('./Inter-Variable.woff2') format('woff2');
+  }
 }
