--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -9,7 +9,9 @@
 /* Вариативный шрифт */
 @font-face {
     font-family: 'Inter-Variable';
-    src: url(./Inter-Variable.woff2) format('woff2-variations'),
+    src: 
+    url(./Inter-Variable.woff2) format('woff2 supports variations'),
+    url(./Inter-Variable.woff2) format('woff2-variations'),
     url(./Inter-Variable.woff2) format('woff2');
     font-weight: 400 785;
 }
