--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,7 +2,7 @@
 
 
 @font-face {
-    font-family: 'PressStart2P-Regular';
+    font-family: 'PressStart2P';
     src: url(./PressStart2P-Regular.woff) format('woff');
 }
 
@@ -16,9 +16,3 @@
     font-weight: 400 785;
 }
 
-@supports (font-variation-settings: normal) {
-  @font-face {
-    font-family: 'Inter-Variable';
-    src: url('./Inter-Variable.woff2') format('woff2-variations');
-  }
-}
