--- a/styles/style.css
+++ b/styles/style.css
@@ -11,37 +11,37 @@
 */
 /* ----Страница---- */
 .page {
-  font-family: var(--font-primary);
+  font-family: var(--font-primary), sans-serif;
+  background-image: var(--bg-gradients);
+  background-repeat: repeat;
+  background-size: cover;
+  background-attachment: scroll;
   min-inline-size: 320px;
   min-block-size: 100dvb;
   font-variation-settings: "wght" var(--font-wieght);
 }
+
 /* ----Шапка---- */
 .header {
   display: flex;
-  justify-content: center;
-  width: 100%;
-  height: calc(100vh * 1.03);
-  background-image: var(--bg-gradients);
-  background-repeat: repeat;
-  background-size: cover;
-}
-/* Блок логотипа */
-.block-logo {
-  display: flex;
   flex-direction: column;
+  justify-content: center;
   justify-content: center;
   align-items: center;
   gap: 20px;
-  margin-top: 98px;
-  margin-bottom: var(--margin-bottom-title);
-  background-color: #ffffff;
+  box-sizing: border-box;
+  margin-top: 100px;
+  margin-bottom: 96px;
+  padding-right: clamp(110px, 122.5px, 140px);
+  padding-left: clamp(110px, 122.5px, 140px);
+  padding-top: 130px;
+  padding-bottom: 130px;
 }
 /* Заголовок */
 .title {
   display: block;
   vertical-align: bottom;
-  font-family: var(--font-accent);
+  font-family: var(--font-accent), sans-serif;
   font-weight: 400;
   font-size: 65px;
   font-style: normal;
@@ -51,7 +51,7 @@
 }
 /* Текст заголовка */
 .title_text {
-  font-family: var(--font-accent);
+  font-family: var(--font-accent), sans-serif;
   font-weight: 400;
   font-size: 23px;
   font-style: normal;
@@ -66,25 +66,27 @@
   justify-content: center;
   align-items: center;
   gap: 50px;
-  margin-top: calc(-50vh + 87px);
+  box-sizing: border-box;
 }
 /* Заголовок карточки */
-.card-title {
-  padding: var(--padding-title-card);
-  background-color: #ffffff;
-}
 /* Текст заголовка карточки */
 .card-title-text {
+  padding: var(--padding-title-card);
   vertical-align: middle;
-  font-family: var(--font-primary);
+  font-family: var(--font-primary), sans-serif;
   font-size: 18px;
   line-height: 100%;
   letter-spacing: 0;
+  background-color: #ffffff;
   font-variation-settings: "wght" var(--font-wieght-bold);
 }
 /* Блок картинки */
 .image-block {
   position: relative;
+  box-sizing: border-box;
+  margin: 0;
+  border-top: 2px solid #000;
+  border-bottom: 2px solid #000;
 }
 /* Надпись на картинке */
 .lable {
@@ -94,21 +96,21 @@
   z-index: 2;
   vertical-align: middle;
   opacity: 0.5;
-  font-family: var(--font-accent);
+  font-family: var(--font-accent), sans-serif;
   font-weight: 400;
   font-size: 14px;
   font-style: normal;
   line-height: 100%;
   letter-spacing: 0;
   text-transform: uppercase;
-  -webkit-text-stroke: 1px rgba(255, 255, 255, 1); /* для Safari */
-  text-stroke: 1px rgba(255, 255, 255, 1);
+  text-shadow: 1px 0 0 rgba(255, 255, 255, 1);
   mix-blend-mode: hard-light;
 }
 /* Картинка в карточке */
 .image {
   display: block;
   width: 100%;
+  height: 694px;
   object-fit: cover;
   object-position: center;
 }
@@ -118,7 +120,7 @@
   flex-direction: column;
   gap: 25px;
   padding: var(--padding-text-card);
-  font-family: var(--font-primary);
+  font-family: var(--font-primary), sans-serif;
   font-size: 18px;
   font-style: normal;
   line-height: 21px;
@@ -136,9 +138,6 @@
 .card__icon-button {
   position: relative;
   box-sizing: border-box;
-  width: 39px;
-  height: 36px;
-  margin-top: 3px;
   margin-right: 6px;
   border: 2px solid transparent;
   padding: 0;
@@ -148,7 +147,6 @@
 }
 /* Иконка */
 .like-icon {
-  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -158,20 +156,20 @@
 /* Кнопка с надписью рядом с иконкой */
 .card__like-button {
   position: relative;
+  box-sizing: border-box;
   width: 130px;
-  margin-top: 3px;
+  height: 38px;
   border: 2px solid #000000;
-  padding: 10.5px;
+  padding: 0;
   background-color: var(--text-color);
   transition: box-shadow 0.3s ease;
 }
 /* Текст кнопки */
 .button__text {
   position: relative;
-  z-index: 1;
   display: block;
   color: var(--text-color);
-  font-family: var(--font-accent);
+  font-family: var(--font-accent), sans-serif;
   font-weight: 400;
   font-size: 14px;
   font-style: normal;
@@ -180,14 +178,6 @@
   mix-blend-mode: difference;
 }
 /* ---Подвал---- */
-.footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding-top: 50px;
-  padding-bottom: 100px;
-}
 /* ----Кнопки---- */
 /* Кнопка в подвале */
 .button-save {
@@ -197,14 +187,17 @@
   align-items: center;
   align-content: center;
   gap: 8px;
+  box-sizing: border-box;
+  margin-bottom: 100px;
   border: 2px solid #000000;
-  padding: 17px 20px;
+  padding: 15px 20px;
   background-color: var(--text-color);
   transition: box-shadow 0.3s ease;
 }
 /* Кнопка в диалогом окне */
 .button-ok {
   position: relative;
+  box-sizing: border-box;
   width: 100%;
   border: 2px solid #000000;
   background-color: var(--text-color);
@@ -213,8 +206,11 @@
 
 /* ---Вспомогательные классы---- */
 .card-width {
-  width: var(--widgth-card);
+  box-sizing: border-box;
+  margin-right: clamp(340px, 370px, 500px);
+  margin-left: clamp(340px, 370px, 500px);
   border: 2px solid black;
+  background-color: #ffffff;
 }
 /* ---SVG--- */
 /* Дискета в подвале */
@@ -317,6 +313,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 384.5px 543.5px;
   padding: 30px;
 }
 /* Затемнение фона */
@@ -334,7 +331,8 @@
 }
 /* Текст диалога */
 .dialog-text {
-  font-family: var(--font-accent);
+  width: 234px;
+  font-family: var(--font-accent), sans-serif;
   font-weight: 400;
   font-size: 14px;
   font-style: normal;
@@ -368,7 +366,7 @@
 /* Наведение (сердцевина) */
 .like-icon:hover .core {
   fill: black;
-  transition: fill 0.3s linear;
+  transition: fill 0.3s linear 0s;
 }
 /* Наведение (тело) */
 .like-icon:hover .main-body {
@@ -378,7 +376,7 @@
 /* При активации кнопки (сердцевина) */
 .like-icon:active .core {
   fill: red;
-  transition: fill 0.3s linear;
+  transition: fill 0.3s linear 0s;
 }
 /* При активации кнопки (Тело) */
 .like-icon:active .main-body {
@@ -388,17 +386,17 @@
 /* При клике по иконке (сердцевина) */
 .like-icon.is-liked .core {
   fill: red;
-  transition: fill 0.3s linear;
+  transition: fill 0.3s linear 0s;
 }
 /* При клике по иконке (тело) */
 .like-icon.is-liked .main-body {
   fill: red;
-  transition: fill 0.3s linear 0.5s;
+  transition: fill 0.3s linear 0.05s;
 }
 /* При клике по иконке (контур) */
 .like-icon.is-liked .contour {
   fill: red;
-  transition: fill 0.3s linear 0.6s;
+  transition: fill 0.3s linear 0.06s;
 }
 /* При клике по иконке (группа span) */
 .like-icon.is-liked .heart {
@@ -419,7 +417,7 @@
 .image-filter-grayscale {
   filter: grayscale(100%);
 }
- /* уменьшает насыщенность цветов вдвое */
+/* уменьшает насыщенность цветов вдвое */
 .image-filter-saturate {
   filter: saturate(50%);
 }
@@ -442,13 +440,19 @@
 /* Проверка поддержки text-stroke */
 @supports (text-stroke: 1px rgba(255, 255, 255, 0.8)) {
   .lable {
-    text-shadow: 1px 0 0 rgba(255, 255, 255, 1);
+    text-shadow: none;
+    -webkit-text-stroke: 1px rgba(255, 255, 255, 1);
+    text-stroke: 1px rgba(255, 255, 255, 1);
   }
 }
 /* Для мобильных устройств */
 @media (width <= 375px) {
   .header {
-    height: calc(100vh * 1.09);
+    margin-bottom: 100px;
+    padding-top: 120px;
+    padding-right: 16px;
+    padding-bottom: 120px;
+    padding-left: 16px;
   }
 
   .title {
@@ -457,6 +461,7 @@
 
   .title_text {
     font-size: 14px;
+    line-height: 100%;
   }
 
   .button-save {
@@ -466,5 +471,32 @@
   .svg_floopy {
     width: 28px;
     height: 28px;
+  }
+
+  .image {
+    height: 371px;
+  }
+
+  .card-title-text {
+    padding: 4px 10px 0 10px;
+    vertical-align: middle;
+    font-family: var(--font-primary), sans-serif;
+    font-size: 18px;
+    line-height: 130%;
+    letter-spacing: 0;
+    font-variation-settings: "wght" var(--font-wieght-bold);
+  }
+
+  .dialog-save[open] {
+    margin: 236px 17px;
+    padding: 30px;
+  }
+
+  .card-width {
+    box-sizing: border-box;
+    margin-right: 0;
+    margin-left: 0;
+    border: 2px solid black;
+    background-color: #ffffff;
   }
 }
