--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -4,6 +4,7 @@
 @font-face {
     font-family: 'PressStart2P';
     src: url(./PressStart2P-Regular.woff) format('woff');
+    font-weight: 400;
 }
 
 /* Вариативный шрифт */
